Updates to 8889base

--- a/style.css
+++ b/style.css
@@ -1,13 +1,13 @@
 /*
-Theme Name: New Base Theme 2024
-Theme URI: https://erasmoh.dev
-Author: Erasmo Hernández
-Author URI: https://erasmoh.dev
+Theme Name: New WP Base Theme
+Theme URI: https://8889agency.com
+Author: Erasmo Hernández by 8889 Agency
+Author URI: https://8889agency.com
 Description: NewBase Theme for development.
 Version: 2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: new-base-theme
+Text Domain: wpbase
 Tags: 
 Use it to make something cool, have fun, and share what you've learned with others.
 */
