--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ Description: NewBase Theme for development.
 Version: 2.0
 License: GNU General Public License v2 or later
 License URI: http://www.gnu.org/licenses/gpl-2.0.html
-Text Domain: wpbase
+Text Domain: 8889wpbase
 Tags: 
 Use it to make something cool, have fun, and share what you've learned with others.
 */
